--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -25,7 +25,7 @@
     --shadow-tailwind: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(50, 50, 50, 0.06) 0px 1px 2px 0px;
     --header-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
     --primary-color: rgb(248, 121, 9);
-    --feint: rgb(45, 45, 45);
+    --feint: rgb(50, 50, 50);
 }
 
 .mid-gap{
@@ -248,6 +248,20 @@ body{
 .empty-account-mid{
     font-size: 150px !important;
     color: var(--input-color);
+}
+
+.input-contain{
+    display: flex;
+    align-items: center;
+    background-color: var(--silver-color);
+    border-radius: 40px;
+    padding-right: var(--padding);
+    gap: var(--gap);
+}
+
+.input-contain select{
+    display: inline-block;
+    width: auto;
 }
 
 .icon-binder{
@@ -911,7 +925,7 @@ hr{
     bottom: 0;
     z-index: 50;
     background-color: white;
-    display: none;
+    display: block;
     justify-content: center;
     align-items: center;
     padding: var(--padding);
