--- a/css/desktop.css
+++ b/css/desktop.css
@@ -301,7 +301,7 @@ body{
     font-size: 15px !important;
 }
 
-input:not(input[type=range]), select, #phonenumber{
+input:not(input[type=range]), select{
     box-sizing: border-box;
     padding: 25px;
     border: none;
