--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -18,7 +18,7 @@
     --padding: 25px;
     --gap: 10px;
     --mid-gap: 25px;
-    --input-color: rgb(247, 247, 247);
+    --input-color: rgb(245, 245, 245);
     --radius: 40px;
     --shadow-4: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     --shadow-tailwind: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(50, 50, 50, 0.06) 0px 1px 2px 0px;
@@ -242,6 +242,7 @@ body{
 .empty-account{
     font-size: 105px !important;
     color: var(--input-color);
+    margin-left: -5px;
 }
 
 .empty-account-mid{
