--- a/css/desktop.css
+++ b/css/desktop.css
@@ -233,7 +233,7 @@ body{
 .edit-plan{
     position: absolute;
     top: -15px;
-    right: 10px;
+    right: 0;
     background-color: var(--input-color);
     padding: 10px;
     border-radius: 50%;
