--- a/css/desktop.css
+++ b/css/desktop.css
@@ -25,6 +25,7 @@
     --header-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
     --primary-color: rgb(248, 121, 9);
     --feint: rgb(50, 50, 50);
+    --primary-feint: rgb(255, 243, 233);
 }
 
 .mid-gap{
@@ -49,11 +50,6 @@ body{
     color: var(--primary-color) !important;
 }
 
-.highlight{
-    margin: 0 -25px;
-    background-color: var(--input-color);
-    padding: var(--padding);
-}
 
 .dark{
     font-family: 'MyFontBd';
@@ -246,6 +242,12 @@ body{
 
 .empty-account-mid{
     font-size: 140px !important;
+}
+
+.highlight{
+    background-color: var(--primary-feint);
+    margin: 0 -25px;
+    padding: var(--padding);
 }
 
 .input-contain{
@@ -536,11 +538,11 @@ img{
 }
 
 .title{
-    font-size: 30px;
+    font-size: 28px;
 }
 
 .title-small{
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .profile-pic-smallest{
@@ -735,7 +737,7 @@ img{
 }
 
 .back-img{
-    background-image: url("https://www.cpacanada.ca/-/media/cpa-digital-hub/featured-images/2020/06/hub_06_10_lovenmoney-hero-700x525.jpg?h=525&w=700&la=en&hash=4883A1009B2B2DEE1694D93D051C03FB20B79060");
+    background-image: url("https://i0.wp.com/thisladyblogs.com/wp-content/uploads/2017/10/How-to-Solve-Working-Couple-Problems.jpg?ssl=1");
     background-size: cover;
     background-position: center;
 }
