--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -613,6 +613,14 @@ img{
     height: 100%;
 }
 
+.curved{
+    box-shadow: var(--shadow-tailwind);
+    padding: var(--padding);
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    margin: 0 -25px;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -913,7 +921,7 @@ a{
   .slider {
     -webkit-appearance: none;
     width: 100%;
-    height: 2px;
+    height: 1px;
     outline: none;
     -webkit-transition: .2s;
     transition: opacity .2s;
