--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -18,7 +18,7 @@
     --padding: 25px;
     --gap: 10px;
     --mid-gap: 25px;
-    --input-color: rgb(248, 248, 248);
+    --input-color: rgb(245, 245, 245);
     --radius: 40px;
     --shadow-4: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     --shadow-tailwind: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
@@ -239,10 +239,12 @@ body{
 .empty-account{
     font-size: 100px !important;
     margin-left: -5px;
+    color: var(--input-color) !important;
 }
 
 .empty-account-mid{
     font-size: 140px !important;
+    color: var(--input-color) !important;
 }
 
 .highlight{
