--- a/css/desktop.css
+++ b/css/desktop.css
@@ -14,6 +14,7 @@
     font-family: 'MyFontHeavy';
     src: url('/HelveticaNeueLTPro-HvEx.otf') format('WOFF');
 }
+
 :root{
     --padding: 25px;
     --gap: 10px;
@@ -51,7 +52,7 @@ body{
 
 
 .dark{
-    font-family: 'MyFontBd';
+    /*font-family: 'MyFontBd';*/
 }
 
 .status{
@@ -81,7 +82,6 @@ body{
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
 }
-
 
 .container-not-top{
     padding: var(--padding);
@@ -393,7 +393,7 @@ button * {
 .development-padding{
     padding-top: 40px;
 }
-
+fsign
 .logo{
     width: 150px;
 }
@@ -413,10 +413,11 @@ button * {
     top: 0;
     transition: top ease .3s, transform ease;
     width: 0%;
+    transition: 0.2s;
     background-color: white;
     z-index: 99999999;
     padding: var(--padding);
-    transition: 0.2s;
+    
 }
 
 .loader-binder{
@@ -565,6 +566,22 @@ img{
     max-width: 90px;
     max-height: 90px;
     border-radius: var(--radius-circle);
+}
+
+.logo-container{
+    background-color: white;
+    position: relative;
+    height: 125px;
+    width: 125px;
+    border-radius: 50%;
+}
+
+.logo-img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
 }
 
 .profile-pic-small:hover {
@@ -970,7 +987,6 @@ hr{
 
 .design-container{
     padding: var(--padding);
-    background-color: var(--feint);
     position: fixed;
     top: 0;
     left: 0;
@@ -980,10 +996,6 @@ hr{
     justify-content: center;
     align-items: center;
     text-align: center;
-}
-
-.design-container *{
-    color: white;
 }
 
 .design-slogan{
@@ -997,3 +1009,193 @@ hr{
     color: var(--primary-color);
 }
 
+
+
+
+
+.logo-background{
+    width: 500px;
+    height: 500px;
+    background-color: black;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(20deg);
+}
+
+.logo-orange-line{
+    border: 10px solid var(--primary-color);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 10px;
+    border-radius: 50%;
+}
+
+.logo-white-line{
+    border: 10px solid white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 30px;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+.logo-left-symbol{
+    background-color: white;
+    height: 250px;
+    width: 90px;
+    position: relative;
+    border-bottom-left-radius: 80px;
+    right: -15px;
+    top: 25px;
+}
+
+.logo-left-symbol-top-ball{
+    position: absolute;
+    background-color: black;
+    top: -1px;
+    left: -1px;
+    height: 30px;
+    width: 31px;
+    border-bottom-right-radius: 40px;
+}
+
+.logo-left-symbol-left-bar-container{
+    background-color: white;
+    height: 100px;
+    top: 50px;
+    width: 46px;
+    position: absolute;
+    left: -45px;
+    border-top-left-radius: 80px;
+}
+
+.logo-left-symbol-left-bar{
+    background-color: black;
+    height: 100px;
+    top: 80px;
+    width: 46px;
+    position: absolute;
+    left: -46px;
+    border-top-left-radius: 80px;
+}
+
+.logo-left-symbol-right-bar{
+    position: absolute;
+    top: -1px;
+    right: 0px;
+    bottom: 0;
+    background-color: black;
+    width: 60px;  
+    border-bottom-left-radius: 80px;
+}
+
+
+
+
+
+
+
+
+.logo-t-symbol{
+    background-color: var(--primary-color);
+    height: 250px;
+    width: 60px;
+    position: relative;
+    border-bottom-left-radius: 40px; 
+    border-bottom-right-radius: 40px; 
+    right: 15px;
+}
+
+.logo-t-symbol-top-ball{
+    position: absolute;
+    background-color: black;
+    top: -1px;
+    left: -1px;
+    height: 30px;
+    width: 31px;
+    border-bottom-right-radius: 40px;
+}
+
+.logo-t-symbol-bottom-ball{
+    position: absolute;
+    background-color: var(--primary-color);
+    bottom: 0px;
+    left: 0px;
+    height: 35px;
+    width: 60px;
+    z-index: 200;
+    border-bottom-left-radius: 40px; 
+    border-bottom-right-radius: 40px; 
+}
+
+.logo-t-symbol-left-bar{
+    position: absolute;
+    background-color: var(--primary-color);
+    top: 50px;
+    left: -30px;
+    height: 60px;
+    width: 31px;
+}
+
+.logo-t-symbol-left-bar-top-ball{
+    position: absolute;
+    background-color: black;
+    top: 49px;
+    left: -30px;
+    height: 30px;
+    width: 30px;
+    border-bottom-right-radius: 40px;
+}
+
+.logo-t-symbol-right-bar{
+    position: absolute;
+    top: -10px;
+    right: 0px;
+    bottom: 20px;
+    background-color: black;
+    width: 31px;  
+    border-bottom-left-radius: 40px; 
+    border-bottom-right-radius: 40px; 
+    border-top-left-radius: 40px; 
+    border-top-right-radius: 40px; 
+    z-index: 250;
+}
+
+
+
+.logo-right-symbol{
+    position: absolute;
+    top: -40px;
+    right: -30px;
+    bottom: -45px;
+    background-color: white;
+    width: 60px;  
+    border-top-right-radius: 40px; 
+    border-top-left-radius: 40px; 
+    border-bottom-right-radius: 80px; 
+}
+
+.logo-right-symbol-bottom-curve{
+    position: absolute;
+    bottom: 0;
+    left: -1px;
+    right: 15px;
+    height: 97px;
+    background-color: black;
+    border-top-right-radius: 160px; 
+    border-bottom-right-radius: 160px; 
+}
