--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -568,20 +568,9 @@ img{
     border-radius: var(--radius-circle);
 }
 
-.logo-container{
-    background-color: white;
-    position: relative;
-    height: 125px;
-    width: 125px;
-    border-radius: 50%;
-}
 
 .logo-img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 250px;
+    width: 100%;
 }
 
 .profile-pic-small:hover {
