--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -1005,7 +1005,7 @@ hr{
 .logo-background{
     width: 500px;
     height: 500px;
-    background-color: black;
+    background-color: var(--feint);
     border-radius: 50%;
     position: relative;
     display: flex;
@@ -1014,7 +1014,7 @@ hr{
     transform: rotate(20deg);
 }
 
-.logo-orange-line{
+/*.logo-orange-line{
     border: 10px solid var(--primary-color);
     position: absolute;
     top: 0;
@@ -1034,7 +1034,7 @@ hr{
     left: 0;
     margin: 30px;
     border-radius: 50%;
-}
+}*/
 
 
 
@@ -1054,7 +1054,7 @@ hr{
 
 .logo-left-symbol-top-ball{
     position: absolute;
-    background-color: black;
+    background-color: var(--feint);
     top: -1px;
     left: -1px;
     height: 30px;
@@ -1073,7 +1073,7 @@ hr{
 }
 
 .logo-left-symbol-left-bar{
-    background-color: black;
+    background-color: var(--feint);
     height: 100px;
     top: 80px;
     width: 46px;
@@ -1087,7 +1087,7 @@ hr{
     top: -1px;
     right: 0px;
     bottom: 0;
-    background-color: black;
+    background-color: var(--feint);
     width: 60px;  
     border-bottom-left-radius: 80px;
 }
@@ -1111,7 +1111,7 @@ hr{
 
 .logo-t-symbol-top-ball{
     position: absolute;
-    background-color: black;
+    background-color: var(--feint);
     top: -1px;
     left: -1px;
     height: 30px;
@@ -1142,7 +1142,7 @@ hr{
 
 .logo-t-symbol-left-bar-top-ball{
     position: absolute;
-    background-color: black;
+    background-color: var(--feint);
     top: 49px;
     left: -30px;
     height: 30px;
@@ -1155,7 +1155,7 @@ hr{
     top: -10px;
     right: 0px;
     bottom: 20px;
-    background-color: black;
+    background-color: var(--feint);
     width: 31px;  
     border-bottom-left-radius: 40px; 
     border-bottom-right-radius: 40px; 
@@ -1184,7 +1184,7 @@ hr{
     left: -1px;
     right: 15px;
     height: 97px;
-    background-color: black;
+    background-color: var(--feint);
     border-top-right-radius: 160px; 
     border-bottom-right-radius: 160px; 
 }
