--- a/css/desktop.css
+++ b/css/desktop.css
@@ -23,7 +23,7 @@
     --radius: 40px;
     --radius-circle: 50%;
     --shadow-tailwind: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-    --primary-color: rgb(248, 121, 9);
+    --primary-color: rgb(253, 118, 0);
     --feint: rgb(50, 50, 50);
     --primary-feint: rgb(255, 243, 233);
 }
@@ -474,7 +474,7 @@ input:-webkit-autofill:active{
 }
 
 .w-100{
-    width: 100%;
+    width: 100% !important;
 }
 
 .kanit{
@@ -496,7 +496,11 @@ img{
 
 .slogan{
     font-family: 'Poller One', cursive;
-    font-size: 30px;
+    font-size: 20px;
+}
+
+.poller{
+    font-family: 'Poller One', cursive;
 }
 
 .slogan-small{
@@ -512,7 +516,7 @@ img{
 
 .slogan-primary-color{
     font-family: 'Poller One', cursive;
-    font-size: 30px;
+    font-size: 20px;
     color: var(--primary-color) !important;
 }
 
@@ -698,7 +702,7 @@ img{
 }
 
 .number-mid{
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'MyFontHeavy';
 }
 
@@ -1005,7 +1009,7 @@ hr{
 .logo-background{
     width: 500px;
     height: 500px;
-    background-color: black;
+    background-color: var(--feint);
     border-radius: 50%;
     position: relative;
     display: flex;
@@ -1014,7 +1018,7 @@ hr{
     transform: rotate(20deg);
 }
 
-.logo-orange-line{
+/*.logo-orange-line{
     border: 10px solid var(--primary-color);
     position: absolute;
     top: 0;
@@ -1034,7 +1038,7 @@ hr{
     left: 0;
     margin: 30px;
     border-radius: 50%;
-}
+}*/
 
 
 
@@ -1054,7 +1058,7 @@ hr{
 
 .logo-left-symbol-top-ball{
     position: absolute;
-    background-color: black;
+    background-color: var(--feint);
     top: -1px;
     left: -1px;
     height: 30px;
@@ -1073,7 +1077,7 @@ hr{
 }
 
 .logo-left-symbol-left-bar{
-    background-color: black;
+    background-color: var(--feint);
     height: 100px;
     top: 80px;
     width: 46px;
@@ -1087,7 +1091,7 @@ hr{
     top: -1px;
     right: 0px;
     bottom: 0;
-    background-color: black;
+    background-color: var(--feint);
     width: 60px;  
     border-bottom-left-radius: 80px;
 }
@@ -1111,7 +1115,7 @@ hr{
 
 .logo-t-symbol-top-ball{
     position: absolute;
-    background-color: black;
+    background-color: var(--feint);
     top: -1px;
     left: -1px;
     height: 30px;
@@ -1142,7 +1146,7 @@ hr{
 
 .logo-t-symbol-left-bar-top-ball{
     position: absolute;
-    background-color: black;
+    background-color: var(--feint);
     top: 49px;
     left: -30px;
     height: 30px;
@@ -1155,7 +1159,7 @@ hr{
     top: -10px;
     right: 0px;
     bottom: 20px;
-    background-color: black;
+    background-color: var(--feint);
     width: 31px;  
     border-bottom-left-radius: 40px; 
     border-bottom-right-radius: 40px; 
@@ -1184,7 +1188,7 @@ hr{
     left: -1px;
     right: 15px;
     height: 97px;
-    background-color: black;
+    background-color: var(--feint);
     border-top-right-radius: 160px; 
     border-bottom-right-radius: 160px; 
 }
