--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -19,13 +19,14 @@
     --padding: 25px;
     --gap: 10px;
     --mid-gap: 25px;
-    --input-color: rgb(245, 245, 245);
+    --input-color: rgb(248, 248, 248);
     --radius: 40px;
     --radius-circle: 50%;
-    --shadow-tailwind: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+    --shadow-tailwind: rgba(190, 190, 190, 0.05) 0px 1px 1px 0px;
     --primary-color: rgb(253, 118, 0);
     --feint: rgb(50, 50, 50);
     --primary-feint: rgb(255, 243, 233);
+    --placeholder-color: rgb(176, 176, 176);
 }
 
 .mid-gap{
@@ -57,8 +58,8 @@ body{
 
 .status{
     width: auto;
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,6 +92,11 @@ body{
 .android-top{
     padding-top: 40px;
 }
+
+::placeholder{
+    color: var(--placeholder-color) !important;
+}
+
 
 .header{
     padding: var(--padding);
@@ -236,7 +242,7 @@ body{
 }
 
 .empty-account{
-    font-size: 100px !important;
+    font-size: 120px !important;
     margin-left: -5px;
 }
 
