--- a/css/desktop.css
+++ b/css/desktop.css
@@ -20,11 +20,6 @@
     src: url('/HelveticaNeueLTPro-HvEx.otf') format('WOFF');
 }
 
-@font-face {
-    font-family: 'ProductSansBd';
-    src: url('/Product Sans Bold.ttf') format('WOFF');
-}
-
 :root{
     --padding: 25px;
     --gap: 10px;
@@ -511,27 +506,27 @@ img{
 }
 
 .slogan{
-    font-family: "ProductSansBd";
+    font-family: "MyFontBdCond";
     font-size: 25px;
 }
 
 .poller{
-    font-family: "ProductSansBd";
+    font-family: "MyFontBdCond";
 }
 
 .slogan-small{
-    font-family: "ProductSansBd";
+    font-family: "MyFontBdCond";
     font-size: 25px;
 }
 
 .slogan-small-color{
-    font-family: "ProductSansBd";
+    font-family: "MyFontBdCond";
     font-size: 25px;
     color: var(--primary-color) !important;
 }
 
 .slogan-primary-color{
-    font-family: "ProductSansBd";
+    font-family: "MyFontBdCond";
     font-size: 25px;
     color: var(--primary-color) !important;
 }
