--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
-
 @font-face {
     font-family: 'MyFont';
     src: url('/Helvetica-Neue-LT-Com-63-Medium-Extended.otf') format('WOFF');
@@ -63,13 +61,13 @@ body{
 
 .status{
     width: auto;
-    width: 120px;
-    height: 120px;
+    width: 140px;
+    height: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: var(--radius-circle);
-    background-color: var(--primary-color);
+    background-color: var(--feint);
 }
 
 .status *{
@@ -106,7 +104,7 @@ body{
 .header{
     padding: var(--padding);
     position: sticky;
-    top: 0px;
+    top: 0;
     left: 0;
     right: 0;
     background-color: white !important;
@@ -247,7 +245,7 @@ body{
 }
 
 .empty-account{
-    font-size: 120px !important;
+    font-size: 140px !important;
     margin-left: -5px;
 }
 
@@ -290,7 +288,7 @@ body{
 }
 
 .icon-big{
-    font-size: 120px !important;
+    font-size: 140px !important;
 }
 
 .icon-profile{
@@ -507,26 +505,26 @@ img{
 
 .slogan{
     font-family: "MyFontBdCond";
+    text-transform: uppercase;
     font-size: 25px;
-}
-
-.poller{
-    font-family: "MyFontBdCond";
 }
 
 .slogan-small{
     font-family: "MyFontBdCond";
+    text-transform: uppercase;
     font-size: 25px;
 }
 
 .slogan-small-color{
     font-family: "MyFontBdCond";
+    text-transform: uppercase;
     font-size: 25px;
     color: var(--primary-color) !important;
 }
 
 .slogan-primary-color{
     font-family: "MyFontBdCond";
+    text-transform: uppercase;
     font-size: 25px;
     color: var(--primary-color) !important;
 }
@@ -783,10 +781,19 @@ img{
     color: white;
 }
 
+.curver{
+    z-index: 200;
+    background-color: white;
+    margin: -25px;
+    padding: var(--padding);
+    border-top-left-radius: var(--radius);
+    border-top-right-radius: var(--radius);
+}
+
 .top-banner{
    padding: var(--padding);
    margin: -25px;
-   margin-bottom: 0;
+   margin-bottom: -40px;
    background-image: url("https://www.creditlimitsinternational.com/wp-content/uploads/2019/11/kent-debt-collection-agency.jpg");
    background-size: cover;
    background-position: center;
@@ -859,7 +866,7 @@ img{
 }
 
 .focused{
-    border-bottom: 1px solid var(--primary-color) !important;
+    border-bottom: 2px solid var(--primary-color) !important;
 }
 
 a{
@@ -873,7 +880,7 @@ a{
     left: 0;
     right: 0;
     background-color: var(--primary-color);
-    height: 1px;
+    height: 2px;
     top: -26px;
 }
 
@@ -944,7 +951,7 @@ a{
   .slider {
     -webkit-appearance: none;
     width: 100%;
-    height: 1px;
+    height: 2px;
     outline: none;
     -webkit-transition: .2s;
     transition: opacity .2s;
