--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -781,19 +781,10 @@ img{
     color: white;
 }
 
-.curver{
-    z-index: 200;
-    background-color: white;
-    margin: -25px;
-    padding: var(--padding);
-    border-top-left-radius: var(--radius);
-    border-top-right-radius: var(--radius);
-}
-
 .top-banner{
    padding: var(--padding);
    margin: -25px;
-   margin-bottom: -40px;
+   margin-bottom: 0;
    background-image: url("https://www.creditlimitsinternational.com/wp-content/uploads/2019/11/kent-debt-collection-agency.jpg");
    background-size: cover;
    background-position: center;
